# linux_project

./: .clang-format  .gitignore  Makefile  README.md  THEMES.md
docs/: architecture.md  report_template.md
kprof/: Makefile  README.md  kprof.c  runner.c  runner.h
kprof-alloc/: Makefile  README.md  myalloc.c  myalloc.h  myalloc_internal.h  myalloc_stats.c  test_alloc.c
kprof-bench/: Makefile  README.md  bench_alloc.c  bench_cache.c  bench_main.c  bench_tlb.c  procfs_reader.c  procfs_reader.h  report.c  report.h
kprof-trace/: Makefile  README.md  kprof.h  kprof_lifecycle.c  kprof_main.c  kprof_pagefault.c  kprof_proc.c  kprof_syscall.c
scripts/: demo.sh  setup_vm.sh
tlb_monitor/: CMakeLists.txt  Makefile  benchmark.c  tlb_module.c  user_tracker.c
